--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -1,9 +1,9 @@
 body {
-  background-image:  linear-gradient(to right,#000040,#400000,#000040);
+  background-image:  linear-gradient(to right,#869397,#5d8aa8,#869397);
 }
 
 hr{
-  border-color: #ffc000;
+  border-color: #000080;
   border-style: none;
   border-top-style:  solid;
   border-width: 3px;
@@ -13,7 +13,7 @@ hr{
 
 h1{
   font-size: 40px;
-  background-image:  linear-gradient(to bottom,#ff0000,#ffc000);
+  background-image:  linear-gradient(to bottom,#000080,#000000);
   -webkit-background-clip:  text;
   -webkit-text-fill-color:  transparent;
 
@@ -21,35 +21,35 @@ h1{
 
 p{
   font-size: 14px;
-  background-image:  linear-gradient(to bottom,#ff0000,#ffb000);
+  background-image:  linear-gradient(to bottom,#000080,#000000);
   -webkit-background-clip:  text;
   -webkit-text-fill-color:  transparent;
 }
 
 h2{
   font-size: 30px;
-  background-image:  linear-gradient(to bottom,#ff4000,#ffff00);
+  background-image:  linear-gradient(to bottom,#000080,#000000);
   -webkit-background-clip:  text;
   -webkit-text-fill-color:  transparent;
 }
 
 h3{
   font-size: 22px;
-  background-image:  linear-gradient(#ff8000, #b0ff00);
+  background-image:  linear-gradient(#000080, #000000);
   -webkit-background-clip:  text;
   -webkit-text-fill-color:  transparent;
 }
 
 h4{
   font-size: 16px;
-  background-image:  linear-gradient(to bottom,#ffa000,#80ff00);
+  background-image:  linear-gradient(to bottom,#000080,#000000);
   -webkit-background-clip:  text;
   -webkit-text-fill-color:  transparent;
 }
 
 table{
   font-size: 14px;
-  background-image:  linear-gradient(to bottom,#ff0000,#ffb000);
+  background-image:  linear-gradient(to bottom,#000080,#000000);
   -webkit-background-clip:  text;
   -webkit-text-fill-color:  transparent;
 }
